Removed 1px border on phones; Avatars no longer cut off.

--- a/assets/thread-phone.css
+++ b/assets/thread-phone.css
@@ -2,7 +2,12 @@
     padding: 0px;
     margin: 0px;
     float: left;
-    max-height: 100px;
+	background-size:contain;
+	background-repeat:no-repeat;
+}
+
+td {
+    border: 0px solid #c0ffee;
 }
 
 .post-content {
